# chemistry-car-controller

./: .gitignore  COPYING  readme.md  readme_data_transmission.md  readme_motor_controller.md
arduino/: Cargo.toml
arduino/src/: main.rs  types.rs
client/: COPYING  Cargo.toml  readme.md  run-client.sh
client/bindings/: Cargo.toml
client/bindings/src/: lib.rs
client/gui/: Cargo.toml
client/gui/run-tests/: test-1-hardwood-home.csv
client/gui/src/: csv_table.rs  events.rs  main.rs
client/serial-to-bluetooth/: Cargo.toml  readme.md
client/serial-to-bluetooth/src/: gatt.rs  main.rs  types.rs
client/src/: bindings.rs  csv_table.rs  events.rs  main.rs  shared.rs  types.rs
r41z-code/: gatt_db.h  gatt_uuid128.h  readme.md  wireless_uart.c
raspberrypi/: Cargo.toml
raspberrypi/src/: main.rs  types.rs
serial-to-bluetooth/: Cargo.toml  readme.md
serial-to-bluetooth/src/: main.rs  types.rs
server/: bindings.py  events.py  main.py  motor_controller.py  readme.md  shared.py  utils.py
test-motors/: main.py
