[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
either = "1.8.1"
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serialport = { version = "4.2.0", default-features = false }
smart-default = "0.6.0"
thiserror = "1.0.38"
