[package]
name = "serial-to-bluetooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
serialport = "4.2.0"
thiserror = "1.0.38"
tokio = "1.25.0"
uuid = "1.3.0"

bindings = { path = "../bindings" }